Rendering Crash, Node Connector Crash, Changing Editors Crash #47785

Closed
opened 2016-03-14 00:05:53 +01:00 by George Muhs · 9 comments

Blender 2.77 rc 2 Crash Bug Report Info

  

System Information

 Operating system and graphics card

CPU: Intel® Core i7-4710MQ CPU @ 2.50GHz ×8 64 bits
RAM: 11 GiB
GFX: Intel Haswell Mobile 4th Gen Core Processor Integrated Graphics Controller
OS: Ubuntu 14.04.4 LTS
Kernel: 3.16.0-51-generic #69~14.04.1-Ubuntu

Blender Version

 Broken: (example: 2.69.7 4b206af, see splash screen)
 Worked: (optional)

Broken: Blender: 2.77 rc 2

           Date: 2016-03-04 17:08
           Hash: 1e1118e
           

Worked: Blender 2.76b on the same platform

 

Short description of error

1: Clicking on 'Animation' to render the composite crashes Blender immediately.
2: Moving a node connector to another node immediately crashed Blender.
3: Changing from the Text Editor to the Node Editor resulted in an immediate crash of Blender.

Exact steps for others to reproduce the error

 Based on a (as simple as possible) attached .blend file with minimum amount of steps

Initial problem: Clicking on 'Animation' to render a composite crashed Blender immediately.

Diagnostic follow-up stage 1: Try to diagnose by simplifying composite. Attempt to find where in the composite the error was occurring by removing parts of the composite. Sorry guys, I tried to work this down to the simplest node tree possible but that created another problem.

Stage 1 Result: Unable to change node hookup without Blender crashing.
Change connectors to directly connect the occupied node sockets of the two nodes marked by the nearby red frames.
Trying to do so crashes Blender.

Navigating Between Editors: Changing from Text Editor to Node Editor by clicking on the icon menu in the lower right corner of the UI pane resulted in an immediate crash.

See: system-info.txt

**Blender 2.77 rc 2 Crash Bug Report Info** ``` ``` **System Information** ``` Operating system and graphics card ``` CPU: Intel® Core i7-4710MQ CPU @ 2.50GHz ×8 64 bits RAM: 11 GiB GFX: Intel Haswell Mobile 4th Gen Core Processor Integrated Graphics Controller OS: Ubuntu 14.04.4 LTS Kernel: 3.16.0-51-generic #69~14.04.1-Ubuntu **Blender Version** ``` Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) ``` Broken: Blender: 2.77 rc 2 ``` Date: 2016-03-04 17:08 Hash: 1e1118e ``` Worked: Blender 2.76b on the same platform ``` ``` **Short description of error** 1: Clicking on 'Animation' to render the composite crashes Blender immediately. 2: Moving a node connector to another node immediately crashed Blender. 3: Changing from the Text Editor to the Node Editor resulted in an immediate crash of Blender. **Exact steps for others to reproduce the error** ``` Based on a (as simple as possible) attached .blend file with minimum amount of steps ``` **Initial problem:** Clicking on 'Animation' to render a composite crashed Blender immediately. **Diagnostic follow-up stage 1:** Try to diagnose by simplifying composite. Attempt to find where in the composite the error was occurring by removing parts of the composite. Sorry guys, I tried to work this down to the simplest node tree possible but that created another problem. **Stage 1 Result:** Unable to change node hookup without Blender crashing. Change connectors to directly connect the occupied node sockets of the two nodes marked by the nearby red frames. Trying to do so crashes Blender. **Navigating Between Editors:** Changing from Text Editor to Node Editor by clicking on the icon menu in the lower right corner of the UI pane resulted in an immediate crash. See: [system-info.txt](https://archive.blender.org/developer/F290517/system-info.txt)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @GeorgeMuhs

Added subscriber: @GeorgeMuhs

Added subscriber: @sindra1961

Added subscriber: @sindra1961

Did you try a BuildBot version?
Download Latest Builds

Did you try a BuildBot version? [Download Latest Builds ](https://builder.blender.org/download/)
Author

Thank you for your suggestion.

I downloaded the following:

blender-2.77-861616b-linux-glibc219-x86_64

The following still exist:
1: Clicking on 'Animation' to render the composite crashes Blender immediately.
2: Moving a node connector to another node immediately crashed Blender.

This did not repeat:
3: Changing from the Text Editor to the Node Editor resulted in an immediate crash of Blender.

A new issue showed up:
4: Automatic rendering by opening or shifting to the node editor crashed Blender. The older version of Blender associated with the original bug did not render automatically although all the setting where set to do so as the newer version did prior to crashing.

Thanks.

Thanks.

Thank you for your suggestion. I downloaded the following: blender-2.77-861616b-linux-glibc219-x86_64 The following still exist: 1: Clicking on 'Animation' to render the composite crashes Blender immediately. 2: Moving a node connector to another node immediately crashed Blender. This did not repeat: 3: Changing from the Text Editor to the Node Editor resulted in an immediate crash of Blender. A new issue showed up: 4: Automatic rendering by opening or shifting to the node editor crashed Blender. The older version of Blender associated with the original bug did not render automatically although all the setting where set to do so as the newer version did prior to crashing. Thanks. Thanks.

This issue was referenced by e509e911a3

This issue was referenced by e509e911a3629cdd8f3f7c5f0a644b2dffe85d5d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This comment was removed by @ideasman42

*This comment was removed by @ideasman42*
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47785
No description provided.