Fix T47785: Rendering Crash, Node Connector Crash, Changing Editors Crash

Regressions after 2.76, to be backported to 2.77.