source/blender/compositor/intern/COM_MemoryBuffer.h
@@ -262,7 +262,7 @@ public:
 		if ((extend_x != COM_MB_REPEAT && (u < 0.0f || u >= this->m_width)) ||
 		    (extend_y != COM_MB_REPEAT && (v < 0.0f || v >= this->m_height)))
 		{
-			zero_v4(result);
+			copy_vn_fl(result, this->m_num_channels, 0.0f);
 			return;
 		}
 		BLI_bilinear_interpolation_wrap_fl(
